🚀 Implemented custom tab styling for User List. 📊 Updated Logout button design with hover effects. 🌟 Added functionality to switch between User List and Item List tabs. 🏆 Fixed styling issues in the Table component. 🔄 Refactored handleLogout function for better readability.

--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -59,7 +59,7 @@ button.swal2-cancel.btn.btn-danger {
 .table-bg{
     background-color: #111827 !important;
 }
-.serach-btn{
+.search-btn{
   background-color: #e99400 !important;
 }
 
@@ -67,3 +67,5 @@ button.swal2-cancel.btn.btn-danger {
 .css-1p9duqc {
   border-bottom: 0 !important;
 }
+
+
